improve dynamodb code to use queries instead of scans
(improves the performance)